{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Touch",
            "id": "36e5e36c-f4ea-4ad9-a6db-8a5c6b99b03d",
            "actions": [
                {
                    "name": "PrimaryContact",
                    "type": "PassThrough",
                    "id": "a34a5a01-2e61-46b0-a119-2bc795f0e551",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "8d332904-9d10-4dc1-a568-4744597cb978",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "665a943c-29be-499e-a8b6-44b05d6bff36",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f72ed42-5bdf-41f3-9112-302646c808e6",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}